--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ HELP.md
 .gradle
 build/
 postgres-data
+settings.gradle
+gradlew.bat
+gradlew
+gradle/wrapper
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
